--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "7.13.8",
+    "node-sass": "4.14.1",
     "react": "17.0.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0",
-    "sass-node": "4.11.2"
+    "react-swm-icon-pack": "^1.0.14"
   },
   "devDependencies": {
     "typescript": "4.1.3"
@@ -20,7 +21,8 @@
     "develop": "set PORT=4444 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "delete": "rm -rf node_modules && rm -rf build"
   },
   "browserslist": [
     ">0.2%",
