Created README file

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -40,6 +40,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#002D9C",
+  "background_color": "#002D9C"
 }
