--- a/public/manifest.json
+++ b/public/manifest.json
@@ -40,6 +40,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#002D9C",
-  "background_color": "#002D9C"
+  "theme_color": "#78a9ff",
+  "background_color": "#78a9ff"
 }
